--- a/01-css-giris.html
+++ b/01-css-giris.html
@@ -10,18 +10,12 @@
     
     
     <h1 style="color: mediumvioletred">CSS Giriş</h1>
-    <h2
-style="color: rgb(217, 190, 207)">CSS Giriş</h2>
-    <h3
-style="color: rgba(184, 51, 84, 0.409)">CSS Giriş</h3>
-    <h4
-style="color: rgb(171, 166, 106)">CSS Giriş</h4>
-    <h5
-style="color: rgb(60, 21, 199)">CSS Giriş</h5>
-    <h6
-style="color: rgb(24, 199, 21)">CSS Giriş</h6>
-    <p
-style="color: darkgoldenrod">
+    <h2 style="color: rgb(217, 190, 207)">CSS Giriş</h2>
+    <h3 style="color: rgba(184, 51, 84, 0.409)">CSS Giriş</h3>
+    <h4 style="color: rgb(171, 166, 106)">CSS Giriş</h4>
+    <h5 style="color: rgb(60, 21, 199)">CSS Giriş</h5>
+    <h6 style="color: rgb(24, 199, 21)">CSS Giriş</h6>
+    <p style="color: darkgoldenrod">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores
       aspernatur animi, natus ea unde necessitatibus error illum. Ducimus animi
       quibusdam distinctio alias adipisci. Perferendis tempore quisquam quia rem
